[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/inBetweenScene/inBetweenScene.gd" type="Script" id=1]
[ext_resource path="res://assets/text/Kenney Mini Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/inBetweenScene/PowerUpBox.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="inBetweenScene" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -57.0
margin_top = -32.0
margin_right = 1339.0
margin_bottom = 780.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="levelNumLabel" type="Label" parent="."]
margin_top = 17.17
margin_right = 1276.0
margin_bottom = 177.17
custom_fonts/font = SubResource( 1 )
text = "42"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loreTextBox" type="Label" parent="."]
margin_top = 177.0
margin_right = 1276.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="permenantInfoBox" type="Label" parent="."]
margin_top = 629.0
margin_right = 1276.0
margin_bottom = 718.0
custom_fonts/font = SubResource( 2 )
text = "Press m to Continue to the Next Level"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUpBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 1669.71, 320 )

[connection signal="anyBtnPressed" from="PowerUpBox" to="." method="_on_PowerUpBox_anyBtnPressed"]
